Changed Alex's GitHub link to my Website

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="https://github.com/kars0nn" target="_blank">Kars0nn</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="https://github.com/AlexMunoz905" target="_blank">Alex Munoz</a>
+                <a class="nav-link" href="https://alex-munoz.net" target="_blank">Alex Munoz</a>
             </li>
         </ul>
     </div>
