--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
             Copyright © Kars0nn- 2020
         </div><br/>
         <div class="nouridio">design by <a href="https://twitter.com/Nouridio"> nouridio</a></div><br>
-        <div class="nouridio">edited and hosted by <a href="https://github.com/alexmunoz905"> Alex Munoz</a></div>
+        <div class="nouridio">edited by <a href="https://alex-munoz.net"> Alex Munoz</a></div>
+        <div class="nouridio">hosted by <a href="https://napend.com"> Napend Enterprises</a></div>
     </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
