--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             Copyright © Kars0nn- 2020
         </div><br/>
         <div class="nouridio">design by <a href="https://twitter.com/Nouridio"> nouridio</a></div><br>
-        <div class="nouridio">edited by <a href="https://alex-munoz.net"> Alex Munoz</a></div>
+        <div class="nouridio">edited by <a href="https://alex-munoz.net"> Alex Munoz</a></div><br>
         <div class="nouridio">hosted by <a href="https://napend.com"> Napend Enterprises</a></div>
     </div>
 </div>
